--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "react-multi-carousel": "^2.6.5",
     "react-redux": "^7.2.4",
     "react-responsive-carousel": "^3.2.22",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-signature-canvas": "^1.0.3",
+    "reactstrap": "8.4.1",
     "redux": "^4.1.1",
     "redux-thunk": "^2.3.0",
     "styled-components": "^5.3.0",
